4.04 2014-08-01

    [ TESTING ]
    - add .travis.yml (https://travis-ci.org)
    - test case for RT #53966 - disallow filenames with ~ char

4.03 2014-07-02

    [ REMOVED / DEPRECATIONS ]
    - the -multiple option to popup_menu is now IGNORED as this did not
      function correctly. If you require a menu with multiple selections
      use the scrolling_list method. (RT #30057)

    [ SPEC / BUG FIXES ]
    - support redirects in mod_perl2, or fall back to using env variable
      for up to 5 redirects, when getting the query string (RT #36312)
    - CGI::Cookie now correctly supports the -max-age argument, previously
      if this was passed the value of the -expires argument would be used
      meaning there was no way to supply *only* this argument (RT #50576)
    - make :all actually import all methods, except for :cgi-lib, and add
      :ssl to the :standard import (RT #70337)

    [ DOCUMENTATION ]
    - clarify documentation regarding query_string method (RT #48370)
    - links fixed in some perldoc (Thanks to Michiel Beijen)

    [ TESTING ]
    - add t/changes.t for testing this Changes file
    - test case for RT #31107 confirming multipart parsing is to spec
    - improve t/rt-52469.t by adding a timeout check

4.02 2014-06-09

    [ NEW FEATURES ]
    - CGI::Carp learns noTimestamp / $CGI::Carp::NO_TIMESTAMP to prevent
      timestamp in messages (RT #82364, EDAVIS@cpan.org)
    - multipart_init and multipart_start learn -charset option (RT #22737)

    [ SPEC / BUG FIXES ]
    - Support multiple cookies when passing an ARRAY ref with -set-cookie
      (RT #15065, JWILLIAMS@cpan.org)

    [ DOCUMENTATION ]
    - Made licencing information consistent and remove duplicate comments
      about licence details, corrected location to report bugs (RT #38285)

4.01 2014-05-27

    [ DOCUMENTATION ]
    - CGI.pm hasn't been removed from core *just* yet, but will be soon:
      http://perl5.git.perl.org/perl.git/commitdiff/e9fa5a80 

4.00 2014-05-22
