@@ -1,19 +1,0 @@
-package CGI::Switch;
-use if $] >= 5.019, 'deprecate';
-use CGI;
-
-$VERSION = '1.02';
-
-1;
-
-__END__
-
-=head1 NAME
-
-CGI::Switch - Backward compatibility module for defunct CGI::Switch
-
-=head1 SYNOPSIS
-
-Do not use this module.  It is deprecated.
-
-=cut
