@@ -2,12 +2,8 @@
 use strict;
 use warnings;
 
-use Test::More tests => 3;
+use Test::More tests => 2;
 
 BEGIN { use_ok 'CGI', qw/ -compile :form / };
 
 is end_form() => '</form>', 'end_form()';
-is endform() => '</form>', 'endform()';
-
-
-
